Fixing cluster icon badge overflow (#749)

--- a/src/renderer/components/cluster-icon/cluster-icon.scss
+++ b/src/renderer/components/cluster-icon/cluster-icon.scss
@@ -30,7 +30,7 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    margin: -$padding * 1.5;
+    margin: -$padding;
     font-size: $font-size-small;
     background: $colorError;
     color: white;
